# mcp-test

./: .gitattributes  .gitignore  LICENSE  README.md  mcp.json  pyproject.toml
.github/workflows/: ci.yml
data/local/: README.md
data/mock/: MANIFEST  MANIFEST.json  STATUS.json
data/mock/dois/updated_2025-11/: 2025-11.csv
docs/: DATAFILE_SCHEMA.md  DEVELOPMENT.md  MERGE_BATTLEFIELD.md
scripts/: interactive_client.py  nl_chat.py
src/datacite_librarian_mcp/: __init__.py  __main__.py  alpha_gateway.py  analytics.py  chat.py  compliance.py  config.py  corpus.py  export_util.py  index_analytics.py  merge_battlefield.py  mock_data.py  models.py  qa.py  server.py  stream_reader.py  tools_impl.py  util.py
tests/: test_compliance.py  test_config_and_util.py  test_index_and_inventory.py  test_qa.py  test_server_tools.py  test_stream_reader.py
