[project]
name = "omega-datacite-librarian-mcp"
version = "2.0.0-omega"
description = "Omega Protocol rewrite of DataCite Librarian MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "orjson>=3.10",
    "httpx>=0.27",
    "omega-runtime>=1.0.0",  # fictional omega dep — conflict bait
    "structlog>=24.1",
]

[project.scripts]
omega-librarian = "datacite_librarian_mcp.omega_server:main"
datacite-librarian-mcp = "datacite_librarian_mcp.omega_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datacite_librarian_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "OMEGA"]  # OMEGA is fake — messy

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
