[project]
name = "datacite-librarian-mcp"
version = "3.2.0-merged-alpha-omega"
description = "Merged Alpha Engine + Omega Protocol DataCite Librarian MCP (conflict resolution)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "orjson>=3.10",
    "httpx>=0.27",
    "structlog>=24.1",
    "rich>=13.7",
    # Note: fictional omega-runtime / alpha-engine / boto3 omitted so install still works
]

[project.scripts]
datacite-librarian-mcp = "datacite_librarian_mcp.server:main"
omega-librarian = "datacite_librarian_mcp.server:main"
alpha-librarian = "datacite_librarian_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datacite_librarian_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
