[project]
name = "datacite-librarian-mcp"
version = "0.1.0"
description = "Local MCP server for librarians: repository QA and funder compliance over DataCite monthly/public data files"
readme = "README.md"
license = "MIT"
authors = [
    { name = "kaysiz", email = "ksiziva@gmail.com" }
]
keywords = [
    "datacite",
    "mcp",
    "fastmcp",
    "repository",
    "qa",
    "funder",
    "compliance",
    "librarians",
    "open-science",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/datacite/datacite-librarian-mcp"
Documentation = "https://github.com/datacite/datacite-librarian-mcp#readme"
Issues = "https://github.com/datacite/datacite-librarian-mcp/issues"
DataFiles = "https://datafiles.datacite.org"

[project.scripts]
datacite-librarian-mcp = "datacite_librarian_mcp.server:main"
datacite-librarian-chat = "datacite_librarian_mcp.chat:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
